--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,15 @@ body{
   font-optical-sizing: auto;
   font-weight: 200;
   font-style: normal;
-  /* background-color: #8EC5FC;
-background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%); */
 
+background: rgb(219, 219, 219)
+
+}
+
+main {
+  height: 80vh; 
+  margin-top: 2rem; 
+  margin-bottom: 2rem; 
+  display: flex; 
+  gap: 2rem; 
 }
