--- a/src/components/CSS/header.css
+++ b/src/components/CSS/header.css
@@ -8,10 +8,11 @@
 
 
   
-  .title {
+  .title a {
     margin: 0 1rem; 
     font-size: 2.7rem;
     color: aliceblue;
+    text-decoration: none;
   }
   
   .logout-button {
