--- a/src/components/CSS/login.css
+++ b/src/components/CSS/login.css
@@ -6,17 +6,17 @@
   }
   
   .login-form {
-    background-color: #f9f9f9;
-    box-shadow: 3px 3px 10px rgb(47, 196, 255);
+   
+    box-shadow: 3px 3px 4px rgb(161, 161, 161);
     border-radius: 5px;
     padding: 1rem;
     width: 300px;
-    background: rgb(65, 196, 248)
+    background: #f0f0f0
   }
   .login-form h2{
     text-align: center;
     padding: 0.5rem;
-    color: #fafafa;
+    color: rgb(161, 161, 161);
   }
   .form-group {
     margin-bottom: 15px;
@@ -24,7 +24,7 @@
   
   label {
     display: block;
-    color: cornsilk;
+    color: rgb(161, 161, 161);
     font-size: 15px;
     margin-bottom: 5px;
   }
@@ -40,7 +40,7 @@
   .login-btn {
     width: 100%;
     padding: 10px;
-   background: rgb(40, 158, 255) ;
+   background:  #5e5e5e;
     color: #fff;
     border: none;
     transition: 0.3s;
@@ -49,21 +49,23 @@
   }
   
   .login-btn:hover {
-    background: rgba(25, 100, 199, 0.774);
+    background:  #b3b3b3
 
   }
   
   .registration-message{
-    color: #e9e9e9;
-    font-size: 12px;
+    color: #4b4b4b;
+    margin-top: 1rem;
+    font-size: 16px;
+    font-weight: 400;
   }
   .registration-message span a{
     margin-left: 5px;
     margin-right: 5px;
-    color: #fff;
+    color: #5e5e5e;
     text-decoration: none;
     font-weight: 700;
-    font-size: 14px;
+    font-size: 16px;
   }
   .registration-message span a:hover{
     color: #000000;
