--- a/src/components/CSS/header.css
+++ b/src/components/CSS/header.css
@@ -4,24 +4,27 @@
     align-items: center;
     background-color: #7a7a7a;
     box-shadow: 1px 1px 6px rgb(87, 87, 87);
+    padding: 0.8rem;
   }
 
 
   
   .title a {
-    margin: 0 1rem; 
-    font-size: 2.7rem;
+    margin: 0 1rem 1rem 1rem; 
+    font-size: 2.4rem;
     color: aliceblue;
     text-decoration: none;
+    
   }
   
   .logout-button {
     padding: 1rem 1.6rem ;
+    cursor: pointer;
     color: 2a2a2a;
     font-size: 20px;
     font-weight: 600;
     border: none;
-    border-radius: 20px 0px 0px 20px;
+    border-radius: 20px ;
     text-align: center;
     background: d3d3d3;
     transition: 0.3s;
