--- a/src/components/CSS/sidebar.css
+++ b/src/components/CSS/sidebar.css
@@ -62,10 +62,11 @@ ul{
   
   .sidebar {
     background-color: #f0f0f0;
-    border-radius: 0px 20px 20px 0px;
-    box-shadow: 0.2px 3px 6px rgb(119, 119, 119);
+    
+    box-shadow: 0.2px 3px 7px rgb(119, 119, 119);
     padding: 20px;
-    height: 100%; 
+    height: 108%; 
+    margin-top: -30px;
     overflow-y: auto;
   }
   
