--- a/src/components/CSS/notehistory.css
+++ b/src/components/CSS/notehistory.css
@@ -47,6 +47,10 @@ height: 500px;
     background-color:#c0bfbf;
     color: #000000;
   }
+  .notehistory-btn a{
+    text-decoration: none;
+    color: #fff;
+  }
   .notehistory-actions{
     margin-right: 2rem;
   }
