--- a/src/components/CSS/notehistory.css
+++ b/src/components/CSS/notehistory.css
@@ -1,14 +1,15 @@
 .notehistory{
 margin-top: 3rem;
-margin-left: 10rem;
+margin-left: 9rem;
 font-size: 1.5rem;
-width: 700px;
+width: 800px;
 height: 500px;
 }
 
 .notehistory-h2 {
     font-size: 34px;
     margin-bottom: 16px;
+    margin-left: 8rem ;
   }
   
   .notehistory-table {
@@ -23,6 +24,7 @@ height: 500px;
     border: 1px solid black;
     padding: 8px;
     text-align: left;
+    font-size: 1.5rem;
     margin: 0px;
     text-transform: capitalize;
   }
@@ -41,6 +43,7 @@ height: 500px;
     border-radius: 4px;
     cursor: pointer;
     transition: 0.2s;
+    font-size: 1.2rem;
   }
   
   .notehistory-btn:hover {
@@ -48,11 +51,13 @@ height: 500px;
     color: #000000;
   }
   .notehistory-btn a{
+    font-size: 1.2rem;
     text-decoration: none;
     color: #fff;
   }
   .notehistory-actions{
     margin-right: 2rem;
+ 
   }
   
   .notehistory-p {
