--- a/src/components/CSS/modal.css
+++ b/src/components/CSS/modal.css
@@ -45,7 +45,29 @@
     cursor: pointer;
     border-radius: 4px;
   }
-  
+     .modal-close-btn {
+    padding: 8px 16px;
+    margin-bottom: 0.7rem;
+    font-size: 1.3rem;
+    border: none;
+    background-color:#494949;
+    color: white;
+    transition: 0.2s;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+
+  .modal-cancle-btn {
+    padding: 8px 16px;
+    margin-bottom: 0.7rem;
+    font-size: 1.3rem;
+    border: none;
+    background-color:transparent;
+    color:#494949;
+    transition: 0.2s;
+    cursor: pointer;
+    border-radius: 4px;
+  }
   .modal-close-btn:hover {
     color: #494949;
     background-color: rgb(211, 211, 211);
