--- a/src/components/CSS/note.css
+++ b/src/components/CSS/note.css
@@ -66,7 +66,7 @@
   }
   
   .note-submit{
-    margin-left: 40rem;
+    margin-left: 38rem;
     text-align: center;
     padding: 15px 25px;
     margin-top: 10px;
@@ -78,4 +78,24 @@
     font-size: 20px;
     transition: background-color 0.3s;
   }
-  
+  .note-update-action{
+    display: flex;
+  }
+  .note-update-cancle{
+    margin-left: 1rem;
+    text-align: center;
+    padding: 15px 25px;
+    margin-top: 10px;
+    background-color:transparent;
+    border: none;
+    border-radius: 5px 5px 5px 5px;
+    text-decoration: none;
+    color: #f0f0f0;
+    font-size: 20px;
+    transition: background-color 0.3s;
+  }
+
+  .note-update-cancle a{
+    text-decoration: none;
+    color:#6e6e6e
+  }
