--- a/src/components/CSS/header.css
+++ b/src/components/CSS/header.css
@@ -3,8 +3,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #525252;
-  box-shadow: 1px 1px 6px rgb(87, 87, 87);
+  background-color: #00246B;;
+  /* box-shadow: 1px 1px 6px #CADCFC;; */
   padding: 0.8rem;
   position: relative;
 }
@@ -12,19 +12,24 @@
 .title a {
   margin: 0 1rem 1rem 1rem;
   font-size: 2.4rem;
-  color: aliceblue;
+  color: #CADCFC;
   text-decoration: none;
 }
-
+.title a:hover{
+  color: #ffffff;;
+}
 .user-icon {
   position: absolute;
-  background: #e0e0e0;
+  background:  #CADCFC;
   border-radius: 50%;
   right: 10rem;
   height: 75%;
   display: flex;
   align-items: center;
-  transition: 0.2s;
+  transition: 0.2s; 
+}
+.user-icon:hover{
+  background: #ffffff;
 }
 
 .user-icon img {
@@ -33,7 +38,7 @@
 }
 .useractive {
   position: absolute;
-  background: #00ff9d;
+  background: #ffffff;
   border-radius: 50%;
   right: 10rem;
   height: 75%;
@@ -50,9 +55,9 @@
   border: none;
   border-radius: 20px;
   text-align: center;
-  background: #d3d3d3;
+  background: #CADCFC;
   transition: 0.3s;
 }
 .logout-button:hover {
-  background: #e0e0e0;
+  background: #8AAAE5;
 }
