--- a/src/components/CSS/login.css
+++ b/src/components/CSS/login.css
@@ -6,18 +6,18 @@
   }
   
   .login-form {
-    box-shadow: 3px 3px 4px rgb(161, 161, 161);
+    box-shadow: 3px 4px 15px  #4f74b9;
     border-radius: 5px;
     padding: 1rem;
     width: 400px;
     height: 400px;
-    background: #f0f0f0
+    background: #CADCFC
   }
-  .login-form h2{
+  .login-h2{
     text-align: center;
-    padding: 0.5rem;
+    padding: 0.5rem; 
     font-size: 3rem;
-    color: rgb(161, 161, 161);
+    color: #00246B;
   }
   .login-form-group {
     margin-bottom: 25px;
@@ -26,7 +26,7 @@
   .login-label {
     display: block;
     margin-left: 10px;
-    color: rgb(161, 161, 161);
+    color: #00246B;
     font-size: 15px;
     margin-bottom: 10px;
   }
@@ -46,9 +46,10 @@
     margin-top: 15px;
     width: 95%;
     margin-left: 10px;
+    font-size: 1.2rem;
     padding: 10px;
-   background:  #5e5e5e;
-    color: #fff;
+   background:  #759de6;
+    color: #00246B;
     border: none;
     transition: 0.3s;
     border-radius: 3px;
@@ -56,12 +57,12 @@
   }
   
   .login-btn:hover {
-    background:  #b3b3b3
-
+    background:  #00246B;
+    color: white;
   }
   
   .registration-message{
-    color: #4b4b4b;
+    color: #00246B;
     margin-top: 1rem;
     font-size: 16px;
     font-weight: 400;
@@ -69,12 +70,12 @@
   .registration-message span a{
     margin-left: 5px;
     margin-right: 5px;
-    color: #5e5e5e;
+    color: #00246B;
     text-decoration: none;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 18px;
   }
   .registration-message span a:hover{
-    color: #000000;
+    color: #8AAAE5;;
     cursor: pointer;
   }
