--- a/src/components/CSS/note.css
+++ b/src/components/CSS/note.css
@@ -8,7 +8,7 @@
   }
 
   .note-h2{
-    color:#6e6e6e;
+    color:#00246B;
     font-size: 2.6rem;
     margin-top: 1rem;
   
@@ -23,9 +23,10 @@
     margin-bottom: -15px;
   }
   ::placeholder{
-    color: rgb(189, 189, 189);
+    color: #00246b80;
   }
   .title-input{
+    background: #cadcfca6;
     width: 99%;
     font-size: 1.4rem;
     padding: 0.2rem;
@@ -58,6 +59,7 @@
   }
   
   textarea {
+    background: #cadcfca6;
     font-size: 1.6rem;
     height: 60vh;
     border: none;
@@ -70,11 +72,28 @@
     text-align: center;
     padding: 15px 25px;
     margin-top: 10px;
-    background-color:#6e6e6e;
+    background-color:#8AAAE5;;
     border: none;
     border-radius: 5px 5px 5px 5px;
     text-decoration: none;
-    color: #f0f0f0;
+    color: #00246B;
+    font-size: 20px;
+    transition: background-color 0.3s;
+  }
+  .note-submit:hover{
+    color: #ffffff;
+    background: #00246B;
+  }
+  .note-submit-inactive{
+    margin-left: 38rem;
+    text-align: center;
+    padding: 15px 25px;
+    margin-top: 10px;
+    background-color:#8aaae59c;;
+    border: none;
+    border-radius: 5px 5px 5px 5px;
+    text-decoration: none;
+    color: #00246B;
     font-size: 20px;
     transition: background-color 0.3s;
   }
@@ -82,7 +101,7 @@
     display: flex;
   }
   .note-update-cancle{
-    margin-left: 1rem;
+    margin-left: 1rem; 
     text-align: center;
     padding: 15px 25px;
     margin-top: 10px;
