--- a/src/components/CSS/notehistory.css
+++ b/src/components/CSS/notehistory.css
@@ -2,7 +2,7 @@
 margin-top: 3rem;
 margin-left: 9rem;
 font-size: 1.5rem;
-width: 800px;
+width: 900px;
 height: 500px;
 }
 
@@ -10,10 +10,13 @@ height: 500px;
     font-size: 34px;
     margin-bottom: 16px;
     margin-left: 8rem ;
+    color: #00246B;;
   }
   
   .notehistory-table {
-    width: 150%;
+    background:  #CADCFC;
+    color: #00246B;;
+    width: 160%;
     border-collapse: collapse;
     border: 1px solid black;
     margin: 0px;
@@ -23,6 +26,7 @@ height: 500px;
   .notehistory-table td {
     border: 1px solid black;
     padding: 8px;
+    color: #00246B;;;
     text-align: left;
     font-size: 1.5rem;
     margin: 0px;
@@ -31,13 +35,14 @@ height: 500px;
 
     
   .notehistory-table th {
-    background-color: #f2f2f2;
+    background-color:  #8AAAE5;
+    color: #ffffff;
   }
   
   .notehistory-btn {
     padding: 8px 16px;
     margin-right: 8px;
-    background-color:#777;
+    background-color:#8AAAE5;;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -47,8 +52,8 @@ height: 500px;
   }
   
   .notehistory-btn:hover {
-    background-color:#c0bfbf;
-    color: #000000;
+    background-color:#00246B;
+    color: #ffffff;
   }
   .notehistory-btn a{
     font-size: 1.2rem;
@@ -62,7 +67,7 @@ height: 500px;
   
   .notehistory-p {
     font-size: 16px;
-    color: #777;
+    color: #00246B;
   }
   
   .nonotes-container {
@@ -82,13 +87,13 @@ height: 500px;
   #nonotes-h2 {
     font-size: 3.25rem;
     font-weight: bold;
-    color: #858585;
+    color: #00246B;
     margin-top: 1rem;
     margin-bottom: 1rem;
   }
   
   #nonotes-p1 {
-    color: #5e5e5e;
+    color: #00246B;
     margin-bottom: 1rem;
     font-size: 1.6rem;
     font-weight: 400;
@@ -102,20 +107,20 @@ height: 500px;
    padding: 1rem;
    border: none;
    border-radius: 5px;
-   background: #5e5e5e;
-   color: #ececec;
+   background: #8AAAE5;
+   color:  #00246B;
    transition: 0.2s;
   }
-  .create-btn a{
+  .create-btn {
     text-decoration: none;
-    color: #ececec;
+    color:  #00246B;
     font-size: 20px;
   }
   
   .create-btn:hover{
-    background-color: #868686;
+    background-color:  #00246B;
   }
-  .create-btn a:hover {
+  .create-btn:hover {
     color: #ffffff;
   }
   .delelte-p{
@@ -124,7 +129,7 @@ height: 500px;
     margin-bottom: 15px;
   }
 
-
+ 
   .selected-note-title{
     font-weight: 600;
     color: #000000;
