--- a/src/components/CSS/sidebar.css
+++ b/src/components/CSS/sidebar.css
@@ -39,17 +39,7 @@ ul{
   background-color: #2c3e50; 
 }
 
-  @media (min-width: 768px) {
-    button {
-      font-size: 1rem;
-    }
-  }
-  
-  @media (min-width: 768px) {
-    aside {
-      width: 18rem;
-    }
-  }
+ 
    */
 
    .sidebar-container {
@@ -61,20 +51,20 @@ ul{
   }
   
   .sidebar {
-    background-color: #f0f0f0;
+    background-color: #9bb4e4;
     
-    box-shadow: 0.2px 3px 7px rgb(119, 119, 119);
+    box-shadow: 0.2px 3px 10px #00246B;
     padding: 20px;
     height: 108%; 
-    margin-top: -30px;
+    margin-top: -32px;
     overflow-y: auto;
   }
   
   .sidebar-title {
     text-align: center;
-    color: #858585;
+    color: #00246B;
     margin-bottom: 20px;
-    font-size: 30px;
+    font-size: 40px; 
     font-weight: 600;
     
   }
@@ -97,10 +87,10 @@ ul{
     text-align: center;
     padding: 10px;
     margin-top: 10px;
-    background-color: #d3d3d3;
+    background-color: #CADCFC;
     border-radius: 5px 5px 5px 5px;
     text-decoration: none;
-    color: #333;
+    color: #00246B;
     transition: background-color 0.3s;
   }
   
@@ -120,5 +110,17 @@ ul{
     color: #ebebeb;
     font-weight: 600;
     transition: background-color 0.3s;
-    background-color: #494949;
+    background-color: #00246B;
+  }
+
+  @media (min-width: 768px) {
+    button {
+      font-size: 1rem;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    aside {
+      width: 18rem;
+    }
   }
