--- a/src/components/CSS/userprofile.css
+++ b/src/components/CSS/userprofile.css
@@ -1,16 +1,16 @@
 
 .user-profile {
     position: absolute;
-    width: 15%;
+    width: 16%;
     height: auto;
     top: 16%;
     left: 90%; 
     transform: translate(-50%, -50%);
     z-index: 9999; 
     padding: 20px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    background-color: #d6e5ff;
+    border: none;
+    border-radius: 5px; 
    
     box-shadow: 0 2px 10px rgba(10, 10, 10, 0.719);
 }
@@ -27,7 +27,7 @@
 }
 .user-profile-p span{
     text-transform: uppercase;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 400;
     margin-left: 5px;
 }
